# cognizantaimlapr2026

BankingManagementSystem/: README.md  pyproject.toml
BankingManagementSystem/Banking.egg-info/: PKG-INFO  requires.txt
BankingManagementSystem/src/: main.py
HealthcareSystem/: pyproject.toml
HealthcareSystem/HealthcareSystem.env/: pyvenv.cfg
HealthcareSystem/src/: main.py
HealthcareSystem/src/healthcare_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
HealthcareSystem/src/models/: doctor.py  patient.py
HealthcareSystem/src/services/: mapper.py
LiberaryManagementSys/: pyproject.toml
LiberaryManagementSys/lib_management_sys.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LiberaryManagementSysenv/: pyvenv.cfg
day02/: pyproject.toml
day02/day02/: pyvenv.cfg
day02/ecommerce.egg-info/: PKG-INFO
day02/src/: app.py  start.py
day03/: pyproject.toml  report.html  report.html--self-contained-html
day03/HealthCare.egg-info/: SOURCES.txt
day03/config/: logger_config.py
day03/day03env/: pyvenv.cfg
day03/src/HealthCare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day03/src/exceptions/: doctor_not_found_exception.py  patient_not_found.py
day03/src/models/: appointment.py  doctor.py  patient.py  person.py  role.py  staff.py
day03/src/stores/: appointment_store.py  doctor_store.py  patient_store.py
day03/src/utils/: app.py  main.py
day03/test/: doctors.csv  patient.csv  test_doctor.py  test_patient.py
day05/: .env  pyproject.toml
day05/banking_project.egg-info/: PKG-INFO  requires.txt
day06/: pyproject.toml
day06/async_io.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+44 files in other folders)
