[project]
name = "healthcare-system"
version = "0.1.0"
description = "Healthcare system mapping patients to doctors based on disease"
authors = [
  { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "python-dotenv"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"